        - added simple color representation conversion functions (used
          in i_fountain().)
        - added the fountain filter:
          - creates gradients similar to paint software
          - 90% support for GIMP gradient files
          - OO interface and documentation
          - Imager::Fountain for building/loading fill definitions
          - named value translation for filters
        - added a generic fill mechanism
          - created versions of i_box() and i_arc() that can fill using
            generic fills
          - solid generic fills (with alpha blending if asked for)
          - hatched generic fills (with some options)
          - fountain generic fills
          - sample code to generate an examples page
        - improved the scale* hatches a bit
        - add the flood_fill() method (using the existing i_flood_fill)
        - implement i_flood_cfill() based on i_flood_fill, and 
          add general fills to the flood_fill() method
        - generalize the combine parameter to get different ways of 
          combining the fill with the target
        - the tt driver (freetype 1) didn't handle the first character
          hanging off the left of the character cell
        - the tt driver produces some artifacts when characters
          overlapped
        - error handling for writing jpeg images
        - writing paletted images to GIF now uses the image palette
          if it's small enough
        - $img->arc() now calls i_circle_aa() if a complete circle is
          being drawn in a plain color
        - image based fills
        - unsharp mask
        - make i_conv() clamp the bottom end of the samples range too
          (makes it useful for sharpening)

=================================================================

        For latest versions check the Imager-devel pages:
        http://www.eecs.umich.edu/~addi/perl/Imager/devel/

=================================================================
